# EIOS

./: .env.example  .env.prod.example  .gitignore  ADR.md  AI_WORK_PROTOCOL.md  ARCHITECTURE.md  BUILD_ENTRYPOINT.md  CLAUDE.md  CLAUDE_DEVELOPMENT_CONTRACT.md  CLAUDE_EXECUTION_PROMPT.md  DOMAIN_MODEL.md  IMPLEMENTATION_PLAN.md  Makefile  PROJECT_VISION.md  README.md  REPOSITORY_AUTHORITY.md  ROADMAP.md  START_HERE.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TECHNOLOGY_BASELINE.md  alembic.ini  pyproject.toml  run_cleanup_for_reindex.py  run_extract_all.py  run_extract_problem_docs.py  run_link_signals.py  run_reindex_annual_reports.py  run_reindex_docling.py  setup_founder.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_user_password_hash.py  003_add_pgvector.py  004_add_agent_runs.py  005_add_workflow_runs.py  006_add_audit_events_and_extend_workflow.py  007_extend_assessment_quality.py  008_add_recommendation_assessment_id.py  009_add_workflow_jobs.py  010_add_organization_rbac.py  011_add_document_ingestion.py  012_add_extraction_hardening.py  013_add_reports.py  014_add_action_tracking.py  015_add_notifications.py  016_add_evidence_intelligence.py  017_add_collaboration.py  018_add_supplier_management.py  019_supplier_name_uniqueness.py  020_add_supplier_scores.py  021_add_board_reports.py  022_add_api_platform.py  023_add_webhook_payload.py  024_board_report_immutability.py  025_add_regulatory_intelligence.py  026_m31_1_hardening.py  027_compliance_reports.py  028_m32_disclosure.py  029_m32_1_due_diligence.py  030_m33_copilot.py  031_m33_1_copilot_hardening.py  032_m33_2_copilot_enterprise.py  033_m34_external_intelligence.py  034_m34_1_connectors.py  035_m34_2_hardening.py  036_m35_supplier_portal.py  037_m35_1_hardening.py  038_m36_monitoring_agents.py  039_m38_1_hardening.py  040_m39_operating_system.py  (+88 more)
backend/app/: main 2.py  main.py
backend/app/middleware/: __init__.py  metrics_counter.py  rate_limiter.py  request_body_size.py  request_id.py  request_logging.py  security_headers.py
backend/application/: audit.py  audit_chain.py  audit_package_service.py  confidence_calculator.py  notification_service.py  prompt_registry.py
backend/application/agent_monitoring/: __init__.py  agent_service.py  alert_service.py  compliance_drift_monitor.py  finding_service.py  intelligence_monitor.py  metrics.py  regulatory_monitor.py  remediation_monitor.py  retention_service.py  risk_monitor.py  scheduler.py  supplier_behaviour_monitor.py
backend/application/agents/: __init__.py  base.py  esg_assessment.py  evaluation.py  governance.py  memory.py  reasoning.py  recommendation.py  registry.py  reporting.py  research.py  retrieval.py  risk_assessment.py
backend/application/ai_governance/: __init__.py  _audit.py  assurance_service.py  control_service.py  decision_service.py  incident_service.py  inventory_service.py  monitoring_service.py  prompt_service.py
backend/application/api_platform/: key_service.py  recovery_worker.py  webhook_service.py
backend/application/budget/: __init__.py  tracker.py
backend/application/collaboration/: mentions.py
backend/application/commercial/: benchmarking.py  board_portal.py
backend/application/compliance/: __init__.py  coverage.py  csddd_rule_engine.py  entity_ownership.py  frameworks.py  gap_engine.py  gaps.py  mapping_engine.py  org_status.py  product_scan.py  scoring.py  seed_regulations.py  supply_chain_summary.py  threshold_calculator.py  verdict.py  weights.py
backend/application/copilot/: action_advisor_engine.py  analytics_service.py  audit_package_service.py  change_summary_engine.py  citation_extractor.py  citation_integrity.py  confidence_calculator.py  context_assembler.py  context_budget.py  context_enricher.py  contradiction_detector.py  copilot_service 2.py  copilot_service.py  executive_brief_engine.py  founder_context.py  freshness_tracker.py  intent_detector.py  quality_filter.py  reproducibility_verifier.py  suggested_questions.py  transcription_service.py  tts_service.py
backend/application/csddd/: esap_exporter.py  readiness_calculator.py  severity_calculator.py
backend/application/disclosure/: coverage_engine.py  readiness_engine.py  seed_frameworks.py  workflow.py
backend/application/dpp/: service.py
backend/application/due_diligence/: csddd_engine.py  environmental_engine.py  human_rights_engine.py  lksg_statement_engine.py  lksgg_engine.py  preventive_measures_engine.py  prioritization_engine.py  remediation_engine.py
backend/application/enterprise/: __init__.py  admin_service.py  hierarchy_service.py  policy_service.py  risk_service.py  rollup_service.py  scim_service.py  scim_token_service.py  search_service.py  sso_service.py  sso_validation.py
backend/application/erp/: connector_service.py  sync_service.py
backend/application/evaluation/: evaluation_service.py  weakness_detector.py
backend/application/executive/: __init__.py  kpi_calculator.py  pptx_exporter.py  summary_generator.py
backend/application/external_intelligence/: __init__.py  base_adapter.py  benchmark_engine.py  benchmark_refresh_service.py  country_risk_service.py  (+12 more)
backend/docs/: m40_production_readiness.md
backend/domain/: __init__.py  agent_monitoring.py  agent_run.py  api_key.py  assessment.py  asset.py  audit_event.py  audit_package.py  base_entity.py  board_report.py  board_signoff.py  chunking.py  comment.py  compliance_gap.py  compliance_report.py  contractual_assurance.py  control.py  copilot.py  copilot_audit.py  corrective_action_plan.py  csddd_obligation.py  dd_policy.py  decision.py  disclosure.py  dpp.py  due_diligence_report.py  effectiveness.py  entity_match.py  enums.py  esap.py  evaluation.py  evidence.py  evidence_chunk.py  exceptions.py  external_intelligence.py  finding.py  finding_evidence_link.py  impact_assessment.py  improvement.py  material.py  (+42 more)
backend/infrastructure/: knowledge_search.py
backend/shared/: config.py  email.py  encryption.py  rate_limit.py  rls.py  security.py
(+1219 files in other folders)
