[project]
name = "eios-backend"
version = "0.1.0"
description = "Enterprise Intelligence Operating System Backend"
requires-python = ">=3.12"
authors = [{ name = "Founder" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "structlog>=24.4.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "sentence-transformers>=3.0.0",
    "pgvector>=0.3.0",
    "anthropic>=0.40.0",
    "pypdf>=4.0.0",
    "pdfminer.six>=20221105",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "fpdf2>=2.8.7",
    "openai>=2.43.0",
    "prometheus-client>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",   # FastAPI Depends() in default args
    "UP042",  # StrEnum migration — deferred; existing str+Enum pattern is stable
    "UP046",  # Generic type-param syntax — Python 3.12+ only, deferred
    "SIM117", # Nested with statements — pre-existing style; merge deferred
]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy ORM models use forward-reference class names in Mapped[] annotations
# that are resolved at runtime via the SQLAlchemy registry, not at import time.
"infrastructure/persistence/models/*.py" = ["F821"]
# Agent system-prompt strings are intentionally long; wrapping them degrades readability.
"application/agents/*.py" = ["E501"]
# Compliance module uses long f-string messages for regulatory explanation text.
"application/compliance/*.py" = ["E501"]
# Extraction parsers contain long regex patterns that must not be line-wrapped.
"application/extraction/*.py" = ["E501"]
# Sector intelligence files contain long explanation strings.
"application/sector_intelligence/*.py" = ["E501"]
# Rate-limit module has long inline comments explaining algorithm behaviour.
"shared/rate_limit.py" = ["E501"]
# PDF renderer module docstring contains long string in comment block.
"infrastructure/reporting/pdf_renderer.py" = ["E501"]
# Integration tests: long assertion messages, unused loop vars, exception chaining in helpers.
"tests/integration/**/*.py" = ["E501", "F841", "B904"]
# Unit test for sector intelligence: long fixture strings + intentional unused vars in test setup.
"tests/unit/application/test_sector_intelligence.py" = ["E501", "F841"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
# Only strictly type-check the domain layer — the pure, dependency-free core.
# Application/infrastructure/interfaces layers use SQLAlchemy, FastAPI, and
# third-party types that require complex stubs; they are checked separately.
exclude = [
    "^application/",
    "^infrastructure/",
    "^interfaces/",
    "^shared/",
    "^alembic/",
    "^tests/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires a running PostgreSQL instance (docker compose up -d)",
]
