[project]
name = "eios-backend"
version = "0.1.0"
description = "Enterprise Intelligence Operating System Backend"
requires-python = ">=3.12"
authors = [{ name = "Founder" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "structlog>=24.4.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "sentence-transformers>=3.0.0",
    "pgvector>=0.3.0",
    "anthropic>=0.40.0",
    "pymupdf>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pypdf>=4.0.0",
    "pdfminer.six>=20221105",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "fpdf2>=2.8.7",
    "openai>=2.43.0",
    "prometheus-client>=0.25.0",
    "pyotp>=2.9.0",
    "redis[asyncio]>=5.0.0",
    "cryptography>=44.0.0",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.5.0",
    "signxml>=5.0.0",
    "celery[redis]>=5.4.0",
    "boto3>=1.35.0",
    # Observability — M46
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "python-pptx>=1.0.2",
    # M28 — Supply Chain Event Bus (Apache Kafka)
    "aiokafka>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",   # FastAPI Depends() in default args
    "B904",   # raise-without-from — FastAPI raise HTTPException inside except is idiomatic
    "E501",   # line too long — ruff format enforces style; remaining overlong lines are strings/comments
    "E741",   # ambiguous variable names — common in algorithmic / index code
    "UP042",  # StrEnum migration — deferred; existing str+Enum pattern is stable
    "UP046",  # Generic type-param syntax — Python 3.12+ only, deferred
    "SIM102", # Nested if → combine with and — pre-existing style
    "SIM105", # try-except-pass → contextlib.suppress — explicit pass is clearer in context
    "SIM115", # open() without context manager — allowed in test assertions and short reads
    "SIM117", # Nested with statements — pre-existing style; merge deferred
]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy ORM models use forward-reference class names in Mapped[] annotations
# that are resolved at runtime via the SQLAlchemy registry, not at import time.
"infrastructure/persistence/models/*.py" = ["F821"]
# Sector intelligence uses forward-reference model names in function return type hints.
"application/sector_intelligence/*.py" = ["F821"]
# __init__.py files re-export symbols for Alembic/SQLAlchemy model discovery.
"**/__init__.py" = ["F401"]
# Integration tests: unused loop vars, exception chaining in helpers.
"tests/integration/**/*.py" = ["F841", "B017"]
# Unit tests: mid-file imports for test isolation, blind exception in Pydantic validation tests.
"tests/unit/**/*.py" = ["E402", "B017", "F841"]
# SSO validation module uses lazy imports after module-level constants (intentional).
"application/enterprise/sso_validation.py" = ["E402"]
# Operating system router has lazy imports inside function bodies to avoid circular imports.
"interfaces/api/routers/operating_system.py" = ["I001", "B009"]

[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
# Only strictly type-check the domain layer — the pure, dependency-free core.
# Application/infrastructure/interfaces layers use SQLAlchemy, FastAPI, and
# third-party types that require complex stubs; they are checked separately.
exclude = [
    "^application/",
    "^infrastructure/",
    "^interfaces/",
    "^shared/",
    "^alembic/",
    "^tests/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires a running PostgreSQL instance (docker compose up -d)",
]
